[package]
name = "daw-out"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git",  rev = "7a01b57735bb0cb18da048e4eb5b303b85b30c4d", features = ["standalone"] } #, features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git",  rev = "7a01b57735bb0cb18da048e4eb5b303b85b30c4d" }
# nih_plug = { path = "../nih-plug", features = ["standalone"]}
# nih_plug_vizia = { path = "../nih-plug/nih_plug_vizia" }
rosc = "0.10.1"
crossbeam-channel = "0.5.4"
parking_lot = "0.12.0"
rubato = "0.14.1"
anyhow = "1.0"

[patch."https://github.com/RustAudio/baseview.git"]
baseview = { git = 'https://github.com/gamingrobot/baseview', branch = "focus-hack" } # hack to capture input focus on left click

[workspace]
members = ["xtask"]

[profile.dev.package.vizia_core] 
opt-level = 2